--- a/style.css
+++ b/style.css
@@ -518,3 +518,23 @@ button.danger {
 .button-row-ce-soir > button:last-child {
   flex: 1 1 100%;
 }
+
+/* Spécifique à la rangée "Ce soir" : Autre idée + select + Transférer */
+.button-row-ce-soir {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 0.4rem;
+  row-gap: 0.4rem;
+}
+
+/* 1ère ligne : Autre idée + select */
+.button-row-ce-soir > button:nth-child(1),
+.button-row-ce-soir > select:nth-child(2) {
+  width: 100%;
+}
+
+/* 2ème ligne : Transférer à Ma semaine sur toute la largeur */
+.button-row-ce-soir > button:nth-child(3) {
+  grid-column: 1 / -1;
+  width: 100%;
+}
